--- a/content/publication/storage-sizing-paper/cite.bib
+++ b/content/publication/storage-sizing-paper/cite.bib
@@ -1,8 +1,9 @@
-@article{example2,
-  title = {An example journal article},
-  author={Bighetti, Nelson and Ford, Robert},
-  journal = {Journal of Source Themes},
-  year    = 2015,
-  volume  = 1,
-  number  = 1
+@article{ren2023analytical,
+  title={An analytical method for sizing energy storage in microgrid systems to maximize renewable consumption and minimize unused storage capacity},
+  author={Ren, Han Kun and Ashtine, Masa{\=o} and McCulloch, Malcolm and Wallom, David},
+  journal={Journal of Energy Storage},
+  volume={68},
+  pages={107735},
+  year={2023},
+  publisher={Elsevier}
 }
